--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,7 +34,7 @@ dependencies = [
     "pwlf<3",
     "psutil<6",
     "gurobi-logtools<4",
-    "fine==2.3.5",
+    "fine",
 ]
 
 requires-python = ">=3.10,<3.13"
